Draft propuesto del ejercicio # 24

--- a/03-node/06/exercices/cags84-solucion-24/package.json
+++ b/03-node/06/exercices/cags84-solucion-24/package.json
@@ -19,7 +19,9 @@
     "url": "https://github.com/jestrade/make-it-real-2021-01/issues"
   },
   "homepage": "https://github.com/jestrade/make-it-real-2021-01#readme",
-  "devDependencies": {
-    "faker": "^5.4.0"
+  "devDependencies": {},
+  "dependencies": {
+    "faker": "^5.4.0",
+    "line-reader": "^0.4.0"
   }
 }
